# rofi-blocks

./: .gitignore  Makefile.am  README.md  configure.ac  shell.nix
examples/: show_lines.sh
examples/scripts/: action_logger.sh  action_logger_event_format.sh  action_logger_with_date.sh  blocks_wrap_args.sh  exit_test.sh  focus_entry.sh  prompt_input_test.sh  top_advanced.sh
patches/: mode-preprocess-input-on-blank-input.patch  mode-preprocess-input.patch  mode-selection-changed.patch  rofi-view-set-case-sensitive.patch  rofi-view-set-icon.patch  rofi-view-set-input.patch  rofi-view-set-placeholder.patch  rofi-view-trigger-action-by-name.patch  universal-password-flag.patch
src/: Makefile.am  blocks.c  blocks_mode_data.c  blocks_mode_data.h  json_glib_extensions.c  json_glib_extensions.h  page_data.c  page_data.h  render_state.c  render_state.h  string_utils.c  string_utils.h
